machines: add radio buttons and fix vertical alignment
Follow-up for #9166 .

Part of #9681 fix.

--- a/pkg/machines/components/diskAdd.css
+++ b/pkg/machines/components/diskAdd.css
@@ -9,6 +9,8 @@
     float: right;
     width: 100%;
     text-align: right;
+    margin-top: 4px;
+    margin-bottom: 0px;
 }
 
 .dialog-field .form-control {
@@ -20,11 +22,7 @@
     padding-bottom: 0px !important;
 }
 
-.add-disk-body {
-    margin-top: 1em;
-}
-
-.add-disk-body .row {
+.add-disk-body .row, .add-disk-dialog .row {
     padding-bottom: 0.5em;
 }
 
@@ -61,6 +59,34 @@
     margin-left: 5px;
     text-align: left;
     color: #363636;
+    margin-top: 0px;
 }
 
 .add-disk-attach-perm > input[type=checkbox] { }
+
+.add-disk-source {
+    padding-left: 5px;
+}
+
+.add-disk-source-label > label {
+    margin-top: 0px;
+}
+
+.add-disk-select-source {
+    padding: 0px;
+    width: auto;
+    padding-right: 20px;
+}
+
+.add-disk-select-source > label {
+    margin-left: 5px;
+    text-align: left;
+    color: #363636;
+    margin-bottom: 0px;
+}
+
+.add-disk-select-source > input[type=radio] {
+    margin-top: 0px;
+    position: relative;
+    top: 2px;
+}
